--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 config.py
+.db.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -62,4 +63,3 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
-
